small fixes to spacing

--- a/client/src/home-blurbs/homeBlurbs.css
+++ b/client/src/home-blurbs/homeBlurbs.css
@@ -31,7 +31,7 @@
     color: white; 
     font-size: 20.47px; 
     line-height: 35px;
-    margin-top: -10px;
+    margin-top: -20px;
 }
 .blurb-img {
     width: 60vh; 
@@ -44,4 +44,8 @@
     height: auto; 
     align-items: center; 
     margin-left: 120px;
+}
+
+.blurb-button {
+    margin-top: 20px;
 }
